# MarchEngine

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  MarchEngine.sln  README.md  main.cpp  premake5.lua  vcpkg.json
App/: IApplicationEventListener.h  WinApplication.cpp  WinApplication.h  WinMain.cpp
Core/: Debug.cpp  Debug.h  GameObject.h  GameTimer.cpp  IComponent.h  MathHelper.h  Scene.h  StringUtility.h  Transform.h
Documentation/: AssetPipeline.md  Build.md  Conventions.md  DebuggingShaders.md  Rendering.md  Shader.md
Editor/: GameEditor.cpp  GameEditor.h
Managed/Binding/: Binding.csproj  BindingGenerator.cs  EntryPoint.cs
Managed/BindingSourceGen/: BindingGenerator.cs  BindingSourceGen.csproj
Managed/Core/: Application.cs  AssemblyInfo.cs  AssetHandle.cs  AssetManager.cs  Color.cs  Component.cs  Core.csproj  Debug.cs  EngineObject.cs  EntryPoint.cs  FolderAsset.cs  GameObject.cs  NativeString.cs  PersistentManager.cs  Rotator.cs  Scene.cs  SceneAsset.cs  SceneManager.cs  Time.cs  TypeCache.cs
Managed/Core/Binding/: NativeArray.cs  NativeFunctionAttribute.cs  NativeString.cs
Managed/Core/Rendering/: Light.cs  Material.cs  MeshRenderer.cs  RenderPipeline.cs  Shader.cs  Texture.cs
Managed/Core/Serialization/: AssetReferenceJsonConverter.cs  FloatDrawerAttribute.cs  HideInInspectorAttribute.cs  PersistentManager.cs  TooltipAttribute.cs  Vector2DrawerAttribute.cs
Managed/Core/Test/: RotateMe.cs
Managed/Editor/: AssetDatabase.cs  AssetImporter.cs  DrawerCache.cs  Editor.csproj  EditorGUI.cs  EditorProperty.cs  IComponentDrawer.cs  IDrawer.cs  IInspectorDrawer.cs  IPropertyDrawer.cs  Inspector.cs  InspectorDrawer.cs  JsonPropertyUtility.cs  PopupMenu.cs  ProjectFileTree.cs  Selection.cs  TypeCache.cs
Managed/Editor/Drawers/: AssetImporterDrawer.cs  AssetReferenceDrawer.cs  BoolDrawer.cs  ColorDrawer.cs  EngineObjectDrawer.cs  EnumDrawer.cs  FloatDrawer.cs  GameObjectDrawer.cs  IListDrawer.cs  IntDrawer.cs  LightDrawer.cs  MaterialImporterDrawer.cs  RotatorDrawer.cs  StringDrawer.cs  TextureImporterDrawer.cs  TextureImportorDrawer.cs  VectorDrawer.cs
Managed/Editor/Importers/: FolderImporter.cs  MaterialImporter.cs  SceneImporter.cs  ShaderImporter.cs  TextureImporter.cs
Managed/Editor/ShaderLab/: Makefile  ShaderLabVisitor.cs
Managed/Editor/Windows/: HierarchyWindow.cs  InspectorWindow.cs  ProjectWindow.cs
Native/: CMakeLists.txt
Native/App/: WinApplication.binding.cpp  WinApplication.cpp  WinApplication.h  WinMain.cpp
Native/Core/: Debug.binding.cpp  Debug.cpp  Debug.h  GameObject.h  GameTimer.cpp  GameTimer.h  IEngine.binding.cpp  IEngine.h  Scene.cpp  StringUtility.h  Transform.h
Native/Editor/: EditorGUI.binding.cpp  EditorGUI.cpp  EditorGUI.h  GameEditor.cpp  GameEditor.h
Native/Rendering/: DescriptorHeap.cpp  DescriptorHeap.h  DxException.cpp  GfxManager.cpp  GfxManager.h  Light.binding.cpp  Light.h  Material.binding.cpp  Material.cpp  Material.h  Mesh.binding.cpp  Mesh.hpp  PipelineState.cpp  PipelineState.h  RenderDoc.cpp  RenderDoc.h  RenderObject.binding.cpp  RenderObject.cpp  RenderObject.h  RenderPipeline.binding.cpp  RenderPipeline.cpp  RenderPipeline.h  Shader.binding.cpp  Shader.cpp  Shader.h
Native/Rendering/Command/: CommandAllocatorPool.cpp  CommandBuffer.cpp  CommandBuffer.h
Native/Rendering/Resource/: GpuBuffer.h  GpuResource.h  Texture.binding.cpp  Texture.cpp  Texture.h  UploadHeapAllocator.cpp  UploadHeapAllocator.h
Native/Scripting/: DotNet.cpp  DotNet.h  ScriptTypes.binding.cpp  ScriptTypes.h
Rendering/: DescriptorHeap.cpp  DescriptorHeap.h  DxException.h  DxMathHelper.h  FrameResouce.h  FrameResource.cpp  GfxManager.cpp  GfxManager.h  Light.h  Mesh.hpp  RenderPipeline.cpp  RenderPipeline.h  UploadBuffer.hpp
Rendering/Command/: CommandAllocatorPool.cpp  CommandAllocatorPool.h  CommandBuffer.cpp  CommandContext.cpp  CommandContext.h
Rendering/Resource/: GpuBuffer.cpp  GpuBuffer.h  GpuResource.h  UploadHeapAllocator.cpp  UploadHeapAllocator.h
Resources/Assets/Materials/: DefaultLit.mat  DefaultSkybox.mat
Resources/Assets/Textures/: EnvSpecularBRDFLUT.dds  OasisSunset.dds  TerminalSky.dds
Shaders/: BlinnPhong.jsonc  Default.hlsl  Lighting.hlsl  default-shader.yaml
Source/BindingGenerator/: AnalyzerReleases.Unshipped.md  BindingGenerator.cs  DiagnosticUtility.cs  SymbolUtility.cs  SyntaxReceiver.cs  build.lua
Source/BindingGenerator/Marshals/: BoolMarshal.cs  NativeMarchObjectMarshal.cs  StringMarshal.cs
Source/CoreManaged/: Application.cs  AssemblyInfo.cs  BinaryAsset.cs  Color.cs  FolderAsset.cs  JobManager.cs  MarchObject.cs  Scene.cs  SceneManager.cs  ScriptAsset.cs  TextAsset.cs  Time.cs  Transform.cs  build.lua
Source/CoreManaged/Diagnostics/: Log.cs  LogLevel.cs
Source/CoreManaged/Interop/: NativeArray.cs  NativeMethodAttribute.cs  NativePropertyAttribute.cs  NativeString.cs  NativeTypeNameAttribute.cs  StringLike.cs
Source/CoreManaged/Pool/: CommonPools.cs  ThreadSafeObjectPool.cs
Source/CoreManaged/Rendering/: DefaultTexture.cs  Enums.cs  GraphicsSettings.cs  Light.cs  Mesh.cs  MeshGeometry.cs  MeshRenderer.cs  RenderPipeline.cs  Texture.cs  (+1 more)
Source/CoreNative/: build.lua
Source/EditorManaged/: DragDrop.cs  DrawerCache.cs  EditorApplication.cs  EditorGUI.cs  EditorGUIUtility.cs  EditorProperty.cs  EditorSceneManager.cs  GenericMenu.cs  Gizmos.cs  GuidUtility.cs  IComponentDrawer.cs  IDrawer.cs  IGizmoDrawer.cs  InspectorDrawer.cs  Selection.cs  TypeCache.cs  build.lua
Source/EditorNative/: EditorApp.manifest  build.lua
Source/Native/: Common.Cpp.props
Source/ShaderLabCompiler/: .gitattributes  CompileGrammars.bat  ShaderCompiler.cs  ShaderLabErrorListener.cs  build.lua
Source/Shaders/: README.md  Shaders.projitems  Shaders.shproj  build.lua  premake5.lua  shadertoolsconfig.json
Tools/: Dev.bat  Dev.ps1  fibonacci_spiral_disk.py  gaussian.py
Tools/DevEnv/: mar.bat
core/: app.cpp  app.h  dx_exception.cpp  dx_exception.h  math_helper.h  mesh.hpp  timer.cpp  timer.h  upload_buffer.hpp
shaders/: test.hlsl  test.yaml
(+831 files in other folders)
